--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -108,14 +108,14 @@
                             <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
                                 @if (Session["UserPessoaFisica"] != null || Session["UserPessoaJuridica"] != null)
                                 {
-                                    <h5><a>Entre no </a><a style="text-decoration:underline; color:#d0a747" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">perfil </a><a>para avaliar</a> </h5>
-                                    <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
-                                        <img src="~/Content/images/avaliar.png" height="60" width="60" style="margin-top: -3rem;" />
+                                    <h5><a>Entre no </a><a style="color: #d0a747;font-weight: bold;" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">perfil </a><a>para avaliar</a> </h5>
+                                    <a style="color: #d0a747;font-weight: bold;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                        <img src="~/Content/images/avaliarDourado.png" height="60" width="60" style="margin-top: -3rem;" />
                                     </a>
                                 }
                                 else
                                 {
-                                    <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                    <a style="color: #d0a747;font-weight: bold;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
                                         <img src="~/Content/images/iconecor.png" height="60" width="60" style="margin-top: -3rem;" />
                                     </a>
                                 }
@@ -178,14 +178,14 @@
                             <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
                                 @if (Session["UserPessoaFisica"] != null || Session["UserPessoaJuridica"] != null)
                                 {
-                                    <h5><a>Entre no </a><a style="text-decoration:underline; color:#d0a747" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">perfil </a><a>para avaliar</a> </h5>
+                                    <h5><a>Entre no </a><a style="color: #d0a747;font-weight: bold;" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">perfil </a><a>para avaliar</a> </h5>
                                     <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
-                                        <img src="~/Content/images/avaliar.png" height="60" width="60" style="margin-top: -3rem;" />
+                                        <img src="~/Content/images/avaliarAzul.png" width="60" style="margin-top: -1rem;" />
                                     </a>
                                 }
                                 else
                                 {
-                                    <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                    <a style="color: #d0a747;font-weight: bold;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
                                         <img src="~/Content/images/iconecor.png" height="60" width="60" style="margin-top: -3rem;" />
                                     </a>
                                 }
