--- a/SupplierRanking/Views/HomeLogada/Perfil.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Perfil.cshtml
@@ -18,7 +18,7 @@
             <div class="rating" style="width: 30px;margin-top: -31px;margin-bottom: -49px;">
 
                 <label>
-                    <input type="radio" name="entrega" value="1" />
+                    <input checked type="radio" name="entrega" value="1" />
                     <span class="icon">★</span>
                 </label>
 
@@ -209,7 +209,7 @@
             left: 31%;"></div>
 
 
-        <div style="width:1500px;height: 680px;background: linear-gradient(-135deg, #0e81b6, #222426);
+        <div style="width:1500px;height: 680px;background-color:#338da8;
             top: 3%;position: absolute;left: 138px; box-shadow: 1px 0px 20px black;">
             <section>
 
@@ -236,7 +236,7 @@
                         {
                             <img src="@imagem64" height="210" width="210" style="border-radius: 50%; border: 4px solid #d0a748;
                                 box-shadow: 0px 0px 29px black;" />
-                            <img src="~/Content/images/premium2.png" height="200" width="160" style="position:absolute; margin-left:122rem; margin-top:-244px;" />
+                            <img src="~/Content/images/premium2.png" height="200" width="160" style="position:absolute;margin-left: 104rem;margin-top: -28px;" />
                         }
                         else
                         {
@@ -262,9 +262,9 @@
 
                     @if (Session["UserPessoaFisica"] != null || Session["UserPessoaJuridica"] != null)
                     {
-                        <h3 style="color:white;position:absolute; margin-top:6rem;margin-left:105rem;">Avalie</h3>
+                        <h3 style="color:white;position:absolute; margin-top:6rem;margin-left:103rem;">Avalie</h3>
                         @*<button id="@Model.Cnpj" style="margin-top: 9rem;margin-left: 104rem;position: absolute;" class="btn btn-info btn-lg" onclick="linkaCaixaContexto(this.id)">Avaliar</button>*@
-                        <img src="~/Content/images/avaliar.png" id="@Model.Cnpj" style="margin-top: 9rem;margin-left: 104rem;position: absolute;" class="btn btn-info btn-lg" onclick="linkaCaixaContexto(this.id)" />
+                        <img src="~/Content/images/avaliarDourado.png" id="@Model.Cnpj" style="margin-top: 9rem;margin-left: 104rem;position: absolute;" onclick="linkaCaixaContexto(this.id)" />
                     }
                     <div style="position: absolute;left: 50%;margin-top: 103px; color:white">
                         @if (Model.Media <= 1)
@@ -323,7 +323,7 @@
                             <img style="position: absolute;right: 790px;top: 190px;width: 40px;" src="~/Content/images/mapa.png" />
 
                             <h2 style="position: absolute;right: 600px;top: 270px;font-size: 22px;width: 151px;">@Model.Telefone</h2>
-                            <h2 style="position: absolute;right: 600px;top: 300px;font-size: 22px;width: 151px;">@Model.Celular</h2>
+                            <h2 style="position: absolute;right: 600px;top: 300px;font-size: 22px;width: 152px;">@Model.Celular</h2>
                             <img style="position: absolute;right: 785px;top: 280px;width: 40px;" src="~/Content/images/phone.png" />
 
                             <h1 style="position: absolute;right: 504px;top: 361px;font-size: 22px;">@Model.Email</h1>
@@ -333,7 +333,7 @@
 
                 </section>
             </div>
-        <div style=" width: 1500px;height: 1108px;background:linear-gradient(-135deg, #222426, #0e81b6);position: absolute;left: 138px;top: 72%;
+        <div style=" width: 1500px;height: auto;background-color:#338da8;position: absolute;left: 138px;top: 72%;
             box-shadow: 1px 13px 20px black;">
 
             @if (Model.Pdf64 != "")
@@ -383,7 +383,7 @@
                     {
                         //LARESSA POR FAVOR ARRUMA ISSO ? ESSA LISTA DE COMENTARIOS TA TODA ZUADA E EU NAO SEI ARRUMAR - OBG 'val if'
 
-                        <li class="col-12 p-4 mb-5" style="    background: #ffffff;box-shadow: 1px 1px 10px black;height: 169px;margin-left: 135px; border-radius: 111px; width: 1170px;">
+                        <li class="col-12 p-4 mb-5" style="list-style: none;background: #ffffff;box-shadow: 1px 1px 10px black;height: 169px;margin-left: 135px; border-radius: 111px; width: 1170px;">
                             @*<div style="width: 1275px;height: 400px;top: 69%;left: 8%;overflow: hidden;box-shadow: 1px 1px 9px black;">*@
                             <div class="comentario" style="idth: 1312px;height: 134px;position: absolute;border: 2px #d0a748;
                                  top: 10%;left: 5%;">
