Val - ExcluirContaComprador arrumado

--- a/SupplierRanking/Views/Shared/_LayoutLogado.cshtml
+++ b/SupplierRanking/Views/Shared/_LayoutLogado.cshtml
@@ -51,7 +51,7 @@
             <!-- Barra de Pesquisa -->
             <section class="row col-12 section-pesquisa d-flex justify-content-center align-items-center m-0">
                 <nav class="col-7 navbar bg-light m-0">
-                    <form class="row col-12" method="post" action="../HomeLogada/Pesquisa">
+                    <form class="row col-12" method="post" action="/HomeLogada/Pesquisa">
 
                             <div id="navbarSupportedContent" class="col-11">
                                 <input name="pesquisa" class="input input-pesquisa pl-5 pr-5" placeholder="Digite a Categoria ou Fornecedor..." />
