--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -31,7 +31,7 @@
                             
                             
 
-                            <form method="post" action="/Avaliacao/CadastrarAvaliacao" >
+                            <form method="post" action="../Avaliacao/CadastrarAvaliacao" >
 
                              <h3 style="margin-top: -10px;margin-bottom: -5px;">Entrega</h3>
 
