Luiz commit final

--- a/SupplierRanking/Views/HomeLogada/Perfil.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Perfil.cshtml
@@ -253,8 +253,7 @@
             left: 31%;"></div>
 
 
-        <div style="width:1500px;height: 680px;background-color:#338da8;
-            top: 3%;position: absolute;left: 138px; box-shadow: 1px 0px 20px black;">
+        <div style="width: 1681px;height: 680px;background-color: #338da8;top: 3%;position: absolute;left: 31px;box-shadow: 1px 0px 20px black;">
             <section>
 
                 <div style="width:210px;height:210px;position: absolute;left: 10%;top:26px;">
@@ -363,11 +362,11 @@
 
 
                             }
-                            <h1 style="position: absolute;right: 397px;top: 182px;font-size: 22px;width: 345px;">@Model.Endereco - @Model.Bairro, @Model.Cidade / @Model.Uf</h1>
+                            <h1 style="position: absolute;right: 411px;top: 182px;font-size: 22px;width: 345px;">@Model.Endereco - @Model.Bairro, @Model.Cidade / @Model.Uf</h1>
                             <img style="position: absolute;right: 790px;top: 190px;width: 40px;" src="~/Content/images/mapa.png" />
 
-                            <h2 style="position: absolute;right: 600px;top: 270px;font-size: 22px;width: 151px;">@Model.Telefone</h2>
-                            <h2 style="position: absolute;right: 600px;top: 300px;font-size: 22px;width: 152px;">@Model.Celular</h2>
+                            <h2 style="position: absolute;right: 600px;top: 270px;font-size: 22px;width: 157px;">@Model.Telefone</h2>
+                            <h2 style="position: absolute;right: 600px;top: 309px;font-size: 22px;width: 152px;">@Model.Celular</h2>
                             <img style="position: absolute;right: 785px;top: 280px;width: 40px;" src="~/Content/images/phone.png" />
 
                             <h1 style="position: absolute;right: 504px;top: 361px;font-size: 22px;">@Model.Email</h1>
@@ -377,8 +376,8 @@
 
                 </section>
             </div>
-        <div style=" width: 1500px;height: auto;background-color:#338da8;position: absolute;left: 138px;top: 72%;
-            box-shadow: 1px 13px 20px black;">
+        <div style="width: 1682px;height: auto;background-color: #338da8;position: absolute;left: 31px;
+        top: 72%;box-shadow: 1px 13px 20px black;">
 
             @if (Model.Pdf64 != "")
             {
