--- a/SupplierRanking/Views/HomeLogada/RankingPremium.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingPremium.cshtml
@@ -103,7 +103,7 @@
                                 {
                                     <h5><a>Entre no </a><a style="text-decoration:underline; color:#d0a747" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">perfil </a><a>para avaliar</a> </h5>
                                         <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
-                                            <img src="~/Content/images/avaliar.png" height="60" width="60" style="margin-top: -3rem;" />
+                                            <img src="~/Content/images/avaliarDourado.png" height="60" width="60" style="margin-top: -3rem;" />
                                         </a>
                                 }
                                 else
@@ -174,7 +174,7 @@
                                 {
                                     <h5><a>Entre no </a><a style="text-decoration:underline; color:#d0a747" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">perfil </a><a>para avaliar</a> </h5>
                                     <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
-                                        <img src="~/Content/images/avaliar.png" height="60" width="60" style="margin-top: -3rem;" />
+                                        <img src="~/Content/images/avaliarDourado.png" height="60" width="60" style="margin-top: -3rem;" />
                                     </a>
                                 }
                                 else
