--- a/SupplierRanking/Views/HomeLogada/RankingInteresses.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingInteresses.cshtml
@@ -102,7 +102,7 @@
                                 {
                                     <h5><a>Entre no </a><a style="text-decoration:underline; color:#d0a747" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">perfil </a><a>para avaliar</a> </h5>
                                     <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
-                                        <img src="~/Content/images/avaliar.png" height="60" width="60" />
+                                        <img src="~/Content/images/avaliarDourado.png" height="60" width="60" />
                                     </a>
                                 }
                                 else
@@ -173,7 +173,7 @@
                                 {
                                     <h5><a>Entre no </a><a style="text-decoration:underline; color:#d0a747" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">perfil </a><a>para avaliar</a> </h5>
                                     <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
-                                        <img src="~/Content/images/avaliar.png" height="60" width="60" />
+                                        <img src="~/Content/images/avaliarAzul.png" height="60" width="60" />
                                     </a>
                                 }
                                 else
