--- a/SupplierRanking/Views/Shared/_LayoutLogado.cshtml
+++ b/SupplierRanking/Views/Shared/_LayoutLogado.cshtml
@@ -34,6 +34,8 @@
         <link rel="stylesheet" href="~/Content/css/checkbox-home-logada.css" />
         <link rel="stylesheet" href="~/Content/config/css/avaliar-star.css" />
         <link rel="stylesheet" href="~/Content/css/modal.css" />
+        <link rel="stylesheet" href="~/Content/css/login.css" />
+        <link rel="stylesheet" href="~/Content/css/cadastro.css" />
         <link rel="stylesheet" href="~/Content/css/style_login.css" />
         <link rel="stylesheet" href="~/Content/css/style_logada.css" />
 
@@ -136,11 +138,11 @@
                     </ul>
 
                     <ul class="list-unstyled nav-menu pt-4 pb-4">
-                        <li class="active">
+                        <li>
                             <a href="/HomeLogada/RankingGeral" aria-expanded="false">Ranking Geral</a>
                         </li>
 
-                        <li>
+                        <li class="active">
                             <a href="/HomeLogada/RankingPremium" aria-expanded="false">Ranking Premium</a>
                         </li>
 
@@ -159,10 +161,7 @@
             <div class="modal fade" id="myModal" role="dialog">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
-                        <div class="modal-header" style="
-                            background-color: #0C496BE6;
-                            color: white;
-                            border-bottom: 3px solid #bbad00; ">
+                        <div class="modal-header" style=" background-color: #0C496BE6; color: white; border-bottom: 3px solid #bbad00; ">
 
                             <div class="col-11 p-0 d-flex justify-content-center">
                                 <h4 class="modal-title">Filtro </h4>
@@ -175,36 +174,59 @@
                         </div>
 
                         <form method="post" action="../HomeLogada/Pesquisa">
-                            <div class="modal-body">
-                                <p>Filtrar por:</p>
+                            <div class="row modal-body">
 
-                                <label style="margin-left: 4px;" class="container">
-                                    Entrega
-                                    <input value="media_entrega" id="entrega" type="radio" checked="checked" name="pesquisa" style="visibility:hidden">
-                                    <span style="margin-left: -15px;" class="checkmark"></span>
-                                </label>
-                                <label style="margin-left: 4px;" class="container">
-                                    Qualidade
-                                    <input value="media_qualidade" id="qualidade" type="radio" name="pesquisa" style="visibility:hidden">
-                                    <span style="margin-left: -15px;" class="checkmark"></span>
-                                </label>
-                                <label style="margin-left: 4px;" class="container">
-                                    Preço
-                                    <input value="media_preco" id="preco" type="radio" name="pesquisa" style="visibility:hidden">
-                                    <span style="margin-left: -15px;" class="checkmark"></span>
-                                </label>
-                                <label style="margin-left: 4px;" class="container">
-                                    Satisfação
-                                    <input value="media_satisfacao" id="satisfacao" type="radio" name="pesquisa" style="visibility:hidden">
-                                    <span style="margin-left: -15px;" class="checkmark"></span>
-                                </label>
-                                <label style="margin-left: 4px;" class="container">
-                                    Atendimento
-                                    <input value="media_atendimento" id="atendimento" type="radio" name="pesquisa" style="visibility:hidden">
-                                    <span style="margin-left: -15px;" class="checkmark"></span>
-                                </label>
+                                <div class="row col-12 mb-5" style="font-size: 18px; color: #DAA520;">
+                                    Realize sua pesquisa apenas por:
+                                </div>
+
+                                <!-- Entrega -->
+                                <div class="row col-7 mb-3">
+                                    <label class="container">
+                                        Entrega
+                                        <input value="media_entrega" id="entrega" type="radio" name="pesquisa" checked="checked" hidden>
+                                        <span style="margin: 5px 0 0 -15px;" class="checkmark"></span>
+                                    </label>
+                                </div>
+
+                                <!-- Qualidade -->
+                                <div class="row col-7 mb-3">
+                                    <label class="container">
+                                        Qualidade
+                                        <input value="media_qualidade" id="qualidade" type="radio" name="pesquisa" hidden>
+                                        <span style="margin: 5px 0 0 -15px;" class="checkmark"></span>
+                                    </label>
+                                </div>
+
+                                <!-- Preço -->
+                                <div class="row col-7 mb-3">
+                                    <label class="container">
+                                        Preço
+                                        <input value="media_preco" id="preco" type="radio" name="pesquisa" hidden>
+                                        <span style="margin: 5px 0 0 -15px;" class="checkmark"></span>
+                                    </label>
+                                </div>
+
+                                <!-- Atendimento -->
+                                <div class="row col-7 mb-3">
+                                    <label class="container">
+                                        Atendimento
+                                        <input value="media_atendimento" id="atendimento" type="radio" name="pesquisa" hidden>
+                                        <span style="margin: 5px 0 0 -15px;" class="checkmark"></span>
+                                    </label>
+                                </div>
+
+                                <!-- Satisfação Geral -->
+                                <div class="row col-7 mb-3">
+                                    <label class="container">
+                                        Satisfação Geral
+                                        <input value="media_satisfacao" id="satisfacao" type="radio" name="pesquisa" hidden>
+                                        <span style="margin: 5px 0 0 -15px;" class="checkmark"></span>
+                                    </label>
+                                </div>
 
                             </div>
+
                             <div class="modal-footer">
                                 <button type="submit" class="btn btn-default" style="width: 150px; height: 40px; background: #0C496Bc9; color: #fff;">Concluir</button>
                                 <button type="button" class="btn btn-default" style="width: 150px; height: 40px;" data-dismiss="modal">Fechar</button>
@@ -219,8 +241,8 @@
         <div class="row col-11 conteudo-logada pt-2 pl-4 pb-2">
              @RenderBody()
 
-            <section class="row col-12" style="height: 100px;">
-                <!-- INÍCIO - RODAPÉ -->
+            <!-- INÍCIO - RODAPÉ -->
+            @*<section class="row col-12" style="height: 100px;">
                 <footer class="row col-12 ftco-footer footer-logado p-3">
 
                     <div class="row col-12 mb-4">
@@ -257,8 +279,8 @@
                         </div>
                     </div>
                 </footer>
-                <!-- FIM - RODAPÉ -->
-            </section>
+            </section>*@
+            <!-- FIM - RODAPÉ -->
         </div>
         <!-- FIM - CONTEÚDO -->
 
