--- a/SupplierRanking/Views/HomeLogada/Perfil.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Perfil.cshtml
@@ -367,22 +367,27 @@
                             </div>
 
                             <div class="mr-5">
-                                <img src="~/Content/images/atendimento.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                <img src="/Content/images/qualidade-produto.png" height="40" width="40" style="background-color:  transparent; border-radius:50%" />
+                                @Model.Media_qualidade
+                            </div>
+
+                            <div class="mr-5">
+                                <img src="/Content/images/atendimento.png" height="40" width="40" style="background-color:  transparent; border-radius:50%" />
                                 @Model.Media_atendimento
                             </div>
 
                             <div class="mr-5">
-                                <img src="~/Content/images/entrega.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                <img src="/Content/images/velocidade-entrega.png" height="40" width="40" style="background-color:  transparent; border-radius:50%" />
                                 @Model.Media_entrega
                             </div>
 
                             <div class="mr-5">
-                                <img src="~/Content/images/preço.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                <img src="/Content/images/preco.png" height="40" width="40" style="background-color:  transparent; border-radius:50%" />
                                 @Model.Media_preco
                             </div>
 
-                            <div>
-                                <img src="~/Content/images/satisfacao.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                            <div class="mr-5">
+                                <img src="/Content/images/satisfacao.png" height="40" width="40" style="background-color:  transparent; border-radius:50%" />
                                 @Model.Media_satisfacao
                             </div>
                         </div>
