--- a/SupplierRanking/Views/HomeLogada/RankingInteresses.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingInteresses.cshtml
@@ -55,27 +55,27 @@
                                             </h2>
                                         </div>
                                         <div>
-                                            <img src="~/Content/images/qualidade.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                            <img src="/Content/images/qualidade-produto.png" height="40" width="40" style="background-color:  transparent; border-radius:50%" />
                                             @item.Media_qualidade
                                         </div>
 
                                         <div>
-                                            <img src="~/Content/images/atendimento.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                            <img src="/Content/images/atendimento.png" height="40" width="40" style="background-color:  transparent; border-radius:50%" />
                                             @item.Media_atendimento
                                         </div>
 
                                         <div>
-                                            <img src="~/Content/images/entrega.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                            <img src="/Content/images/velocidade-entrega.png" height="40" width="40" style="background-color:  transparent; border-radius:50%" />
                                             @item.Media_entrega
                                         </div>
 
                                         <div>
-                                            <img src="~/Content/images/preço.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                            <img src="/Content/images/preco.png" height="40" width="40" style="background-color:  transparent; border-radius:50%" />
                                             @item.Media_preco
                                         </div>
 
                                         <div>
-                                            <img src="~/Content/images/satisfacao.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                            <img src="/Content/images/satisfacao.png" height="40" width="40" style="background-color:  transparent; border-radius:50%" />
                                             @item.Media_satisfacao
                                         </div>
                                     </div>
