--- a/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
+++ b/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
@@ -119,7 +119,7 @@
                     <!--- Visualizar Senha --->
                     <div class="d-flex align-items-center">
                         <button id="btnSenha">
-                            <img src="/Content/images/comprador.png" />
+                            <img src="/Content/images/ver-senha.png" style="width: 40px; height: 40px;" />
                         </button>
                     </div>
                 </div>
