--- a/SupplierRanking/Views/Fornecedor/CadastroFuncionario.cshtml
+++ b/SupplierRanking/Views/Fornecedor/CadastroFuncionario.cshtml
@@ -63,7 +63,7 @@
             <!--- Visualizar Senha --->
             <div class="col-2 d-flex justify-content-center pr-5">
                 <button id="btnSenha">
-                    <img src="/Content/images/comprador.png" />
+                    <img src="/Content/images/ver-senha.png" style="width: 40px; height: 40px;" />
                 </button>
             </div>
         </div>
