--- a/SupplierRanking/Views/Fornecedor/UpdateSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/UpdateSenha.cshtml
@@ -50,7 +50,7 @@
             <!--- Visualizar Senha --->
             <div class="col-2 d-flex justify-content-center pr-5">
                 <button id="btnSenha">
-                    <img src="~/Content/images/olhoFechado.png" />
+                    <img src="/Content/images/ver-senha.png" style="width: 40px; height: 40px;" />
                 </button>
             </div>
         </div>
